--- a/Mifalot-app/src/app/pages/attendance/attendance.component.css
+++ b/Mifalot-app/src/app/pages/attendance/attendance.component.css
@@ -1,4 +1,3 @@
-
 /*footer*/
 footer{
     margin-bottom: 5%;
@@ -87,10 +86,10 @@ footer{
 .btn-bottom
 {
     display: block;
-    height: 50px;
+    height: 30px;
     background-color: transparent;
+    font-size: 85%;
 }
-
 
 .thumbnail
 {
@@ -119,7 +118,8 @@ footer{
 /******************************/
 
 .checkbox label:after, 
-.radio label:after {
+.radio label:after
+{
     content: '';
     display: table;
     clear: both;
@@ -130,7 +130,8 @@ footer{
 }
 
 .checkbox .cr .cr-icon,
-.radio .cr .cr-icon {
+.radio .cr .cr-icon 
+{
     position: absolute;
     font-size: .8em;
     line-height: 0;
@@ -138,56 +139,65 @@ footer{
     left: 20%;
 }
 
-.radio .cr .cr-icon {
+.radio .cr .cr-icon 
+{
     margin-left: 0.04em;
 }
 
 .checkbox label input[type="checkbox"],
-.radio label input[type="radio"] {
-    display: none;
-    
+.radio label input[type="radio"] 
+{
+    display: none;   
 }
 
 .checkbox label input[type="checkbox"] + .cr > .cr-icon,
-.radio label input[type="radio"] + .cr > .cr-icon {
+.radio label input[type="radio"] + .cr > .cr-icon 
+{
     transform: scale(3) rotateZ(-20deg);
     opacity: 0;
-    transition: all .3s ease-in;
-    
+    transition: all .3s ease-in; 
 }
 
 .checkbox label input[type="checkbox"]:checked + .cr > .cr-icon,
-.radio label input[type="radio"]:checked + .cr > .cr-icon {
+.radio label input[type="radio"]:checked + .cr > .cr-icon 
+{
     transform: scale(1) rotateZ(0deg);
     opacity: 1;
-    
 }
 
 .checkbox label input[type="checkbox"]:disabled + .cr,
-.radio label input[type="radio"]:disabled + .cr {
-    opacity: .5;
-    
+.radio label input[type="radio"]:disabled + .cr 
+{
+    opacity: .5; 
 }
 
 label
 {
-  font-size: 1em;
-  padding: 1%;
+    font-size: 1em;
+    padding: 1%;
 }
 
- hr
- {
-   width: 80%;
- }
+hr
+{
+    width: 80%;
+}
 
 /****************************************/
 /********** Scrollbar Height  ***********/
+
+@media only screen and (max-height: 2560px)
+{
+    .vertical-menu 
+    {
+      height: 2100px;
+    }
+}
 
 @media only screen and (max-height: 1366px)
 {
     .vertical-menu 
     {
-        height: 920px;
+        height: 950px;
     }
 }
 
@@ -195,7 +205,7 @@ label
 {
     .vertical-menu 
     {
-      height: 850px;
+      height: 920px;
     }
 }
 
@@ -203,7 +213,7 @@ label
 {
     .vertical-menu 
     {
-        height: 620px;
+        height: 670px;
     }
 }
 
@@ -211,7 +221,7 @@ label
 {
     .vertical-menu 
     {
-        height: 570px;
+        height: 610px;
     }
 }
 
@@ -219,7 +229,7 @@ label
 {
     .vertical-menu 
     {
-        height: 460px;
+        height: 530px;
     }
 }
 
@@ -227,7 +237,7 @@ label
 {
     .vertical-menu 
     {
-        height: 440px;
+        height: 480px;
     }
 }
 
@@ -235,7 +245,7 @@ label
 {
     .vertical-menu 
     {
-        height: 340px;
+        height: 385px;
     }
 }
 
@@ -243,7 +253,7 @@ label
 {
     .vertical-menu 
     {
-        height: 410px;
+        height: 450px;
     }
 }
 
@@ -251,7 +261,7 @@ label
 {
     .vertical-menu 
     {
-        height: 400px;
+        height: 450px;
     }
 }
 
@@ -267,7 +277,7 @@ label
 {
     .vertical-menu 
     {
-        height: 310px;
+        height: 360px;
     }
 }
 
@@ -284,7 +294,7 @@ label
 {
     .vertical-menu 
     {
-        height: 225px;
+        height: 255x;
     }
 }
 
@@ -293,5 +303,13 @@ label
     .vertical-menu 
     {
         height: 180px;
+    }
+}
+
+@media only screen and (max-height: 360px)
+{
+    .vertical-menu 
+    {
+        height: 45px;
     }
 }
