--- a/Mifalot-app/src/app/pages/reports/reports.component.html
+++ b/Mifalot-app/src/app/pages/reports/reports.component.html
@@ -2,7 +2,7 @@
 <!-- ================================================================================================================================================ -->
 <!-- Navbar -->
 
-<app-nav-header></app-nav-header>
+<app-nav-header [button] = "button" (onUserClicked) = "navigate()"></app-nav-header>
 
 <!-- ================================================================================================================================================ -->
 <!-- User wait for admin to confirm him OR user was blocked by admin -->
