--- a/Mifalot-app/src/app/pages/pupils-management/pupils-management.component.html
+++ b/Mifalot-app/src/app/pages/pupils-management/pupils-management.component.html
@@ -1,7 +1,7 @@
 <!-- ================================================================================================================================================ -->
 <!-- Navbar -->
 
-<app-nav-header></app-nav-header>
+<app-nav-header [button] = "button" (onUserClicked) = "navigate()"></app-nav-header>
 
 <!-- ================================================================================================================================================ -->
 <!-- User wait for admin to confirm him OR user was blocked by admin -->
@@ -52,8 +52,6 @@
             <div class = "buttons-center">
                 <button (click) = "showAddPupils()" class = "btn btn-md btn-success btn-block" type = "submit"> הוספת חניכים לקבוצה </button>
                 <button (click) = "showRemovePupils()" class = "btn btn-md btn-danger btn-block" type = "submit"> הסרת חניכים מהקבוצה </button>
-                <br>
-                <button (click) = "chooseTeam()" class = "btn btn-md btn-primary btn-block" type = "submit"> חזרה לעמוד הקודם </button>
             </div>
         </div>
 
@@ -102,8 +100,6 @@
             
             <!-- Buttons -->
             <button (click) = "addNewPupilsToDB()" class = "btn btn-md btn-success btn-block" type = "submit"> אישור הוספת החניכים </button>
-            <button (click) = "backToAddOrRemove()" class = "btn btn-md btn-primary btn-block" type = "submit"> חזור להוספת/הסרת חניכים </button>
-
         </div>
 
         <!-- /Add pupils -->
@@ -140,7 +136,6 @@
             </div>
 
             <button (click) = "removePupilsFromDB()" class = "btn btn-md btn-danger btn-block btn-remove" type = "submit"> הסר חניכים נבחרים </button>
-            <button (click) = "backToAddOrRemove()" class = "btn btn-md btn-primary btn-block" type = "submit"> חזור להוספת/הסרת חניכים </button>
         </div>
 
         <!-- =========================================================================================================================== -->
