--- a/Mifalot-app/src/app/pages/pupils-management/pupils-management.component.css
+++ b/Mifalot-app/src/app/pages/pupils-management/pupils-management.component.css
@@ -1,4 +1,3 @@
-
 /* Teams */
 
 .thumbnail
@@ -70,7 +69,6 @@ input
     margin: 0 auto;
     max-width: 100%;
     width: 100%;
-
     overflow-y: scroll;
 }
 
@@ -99,6 +97,14 @@ input
 /****************************************/
 /********** Scrollbar Height  ***********/
 
+@media only screen and (max-height: 2560px)
+{
+    .vertical-menu 
+    {
+        height: 2150px;
+    }
+}
+
 @media only screen and (max-height: 1366px)
 {
     .vertical-menu 
@@ -107,11 +113,51 @@ input
     }
 }
 
+@media only screen and (max-height: 1280px)
+{
+    .vertical-menu 
+    {
+        height: 900px;
+    }
+}
+
 @media only screen and (max-height: 1024px)
 {
     .vertical-menu 
     {
-        height: 640px;
+        height: 650px;
+    }
+}
+
+@media only screen and (max-height: 960px)
+{
+    .vertical-menu 
+    {
+        height: 585px;
+    }
+}
+
+@media only screen and (max-height: 950px)
+{
+    .vertical-menu 
+    {
+        height: 580px;
+    }
+}
+
+@media only screen and (max-height: 900px)
+{
+    .vertical-menu 
+    {
+        height: 535px;
+    }
+}
+
+@media only screen and (max-height: 800px)
+{
+    .vertical-menu 
+    {
+        height: 430px;
     }
 }
 
@@ -119,7 +165,7 @@ input
 {
     .vertical-menu 
     {
-        height: 330px;
+        height: 385px;
     }
 }
 
@@ -127,7 +173,7 @@ input
 {
     .vertical-menu 
     {
-        height: 390px;
+        height: 380px;
     }
 }
 
@@ -143,7 +189,7 @@ input
 {
     .vertical-menu 
     {
-        height: 300px;
+        height: 280px;
     }
 }
 
@@ -156,4 +202,10 @@ input
     }
 }
 
-
+@media only screen and (max-height: 533px)
+{
+    .vertical-menu 
+    {
+        height: 155px;
+    }
+}
