--- a/Mifalot-app/src/app/pages/blocked-users/blocked-users.component.css
+++ b/Mifalot-app/src/app/pages/blocked-users/blocked-users.component.css
@@ -1,7 +1,20 @@
+
 .thumbnail
 {
-    height: 120px;
+    height: auto;
     background-color: transparent;
+    border: none;
+    margin: 1%;
+}
+
+.btn-team
+{
+    white-space: normal;
+    height: 100%;
+    font-size: 120%;
+    font-weight: bold;
+    border-radius: 50px;
+     border: 4px solid gray;
 }
 
 button
