--- a/Mifalot-app/src/app/associate-teams/associate-teams.component.html
+++ b/Mifalot-app/src/app/associate-teams/associate-teams.component.html
@@ -4,13 +4,26 @@
  <div class = "container">
     <div class = "row">
       <div class = "col-lg-12 text-center"> 
-        <h5> סמן את הקבוצות אותן תרצה לשייך למשתמש זה </h5> 
+        <h5> <i class = "fa fa-search pull-left" aria-hidden = "true" (click) = "searchPressed = !searchPressed"></i>  סמן את הקבוצות אותן תרצה לשייך למשתמש זה </h5>
+
+        <!-- Search team -->
+        <div class = "row">
+          <div class = "col-xs-10 col-xs-offset-1"> 
+            <input *ngIf = "searchPressed" type = "text" class = "form-control text-right w3-animate-opacity" placeholder = "חיפוש לפי שם קבוצה" [(ngModel)] = "teamName" />
+          </div>
+        </div>
       </div>
+
+      <!-- ========== -->
+      <!-- Show teams -->
+
       <div class = "col-lg-4 col-lg-offset-1">
         <div class = "vertical-menu" [class.vertical-menu-bigger] = "userDetails[1] == 'users-management'">
           <div *ngFor = "let team of teams | async" class = "list-group text-right" [ngSwitch] = "isChecked(team)">
-            <a *ngIf = "userDetails[2] == 3 && team.coachID == ''" class = "list-group-item" [class.green] = "isChecked(team)" (click) = "saveTeamToAssociate(team)"> {{ team.name }} </a>
-            <a *ngIf = "userDetails[2] == 2 && team.managerID == ''" class = "list-group-item" [class.green] = "isChecked(team)" (click) = "saveTeamToAssociate(team)"> {{ team.name }} </a>
+            <div *ngIf = "(team.name).search(teamName) != -1">
+             <a *ngIf = "userDetails[2] == 3 && team.coachID == ''" class = "list-group-item" [class.green] = "isChecked(team)" (click) = "saveTeamToAssociate(team)"> {{ team.name }} </a>
+             <a *ngIf = "userDetails[2] == 2 && team.managerID == ''" class = "list-group-item" [class.green] = "isChecked(team)" (click) = "saveTeamToAssociate(team)"> {{ team.name }} </a>
+          </div>
           </div>
         </div>
         <br>
