--- a/Mifalot-app/src/app/pages/messages/messages.component.css
+++ b/Mifalot-app/src/app/pages/messages/messages.component.css
@@ -15,6 +15,17 @@ input
   direction: rtl;
 }
 
+.search
+{
+    direction: rtl;
+    border-radius: 15px;
+    border: 2px solid white;
+    background: #faebd7;
+    color: black;
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
+
 /********************************************/
 
 .create-chat
@@ -50,6 +61,7 @@ p
 .vertical-menu 
 {
   padding: 2%;
+  padding-top: 0;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 55%;
   line-height: 1;
