--- a/Mifalot-app/src/app/pages/messages/messages.component.html
+++ b/Mifalot-app/src/app/pages/messages/messages.component.html
@@ -26,16 +26,20 @@
 
       <div class = "container">
             <button (click) = "newChatRoom()" type = "button" class = "btn btn-success btn-block" > <i class = "fa fa-plus" > </i> יצירת חדר צ׳אט חדש </button>
+             <!-- Search team -->
+
+            <input type = "text" class = "search text-right col-xs-8 col-xs-offset-2" placeholder = "חיפוש צ'אט" [(ngModel)] = "chatName" />
+
+ 
+     
       </div>
-    
-      <p>
-        
+
       <div class = "vertical-menu chat-rooms">
           <div *ngIf = "(chatRooms | async)?.length == 0" class = "alert alert-warning text-center" role = "alert">
             <strong> אין כרגע חדרי צ׳אט פתוחים </strong> <br> באפשרותך ליצור חדר צ׳אט חדש ולשתף חוויות 
           </div>
           <div *ngFor = "let chatRoom of chatRooms | async" class = "list-group text-right">
-              <span class = "list-group-item clearfix direction-rtl" (click) = "enterChatRoom(chatRoom)">  
+              <span *ngIf = "(chatRoom.name).search(chatName) != -1" class = "list-group-item clearfix direction-rtl" (click) = "enterChatRoom(chatRoom)">  
                   <span class = "text-bold"> {{ chatRoom.name }} </span> <br> <span id = "author-name"> פותח: {{ chatRoom.authorName }} </span>
                   <span class = "fa fa-message"></span>
                   <span *ngIf = "user.uid == chatRoom.authorID" class = "pull-left">
