--- a/Mifalot-app/src/app/pages/messages/messages.component.css
+++ b/Mifalot-app/src/app/pages/messages/messages.component.css
@@ -24,6 +24,7 @@ input
     color: black;
     margin-top: 8px;
     margin-bottom: 8px;
+    padding-right: 15px;
 }
 
 /********************************************/
