Creating a new service called 'share service' and fixing navigate for users

--- a/Mifalot-app/src/app/nav-header/nav-header.component.html
+++ b/Mifalot-app/src/app/nav-header/nav-header.component.html
@@ -1,7 +1,7 @@
     <nav class = "navbar navbar-default navbar-default" role = "navigation">
         <div class = "container-fluid" id = "navfluid">
             <div class = "navbar-header">
-                <a class = "navbar-brand fa {{ button.icon }}" (click) = "backButtonClicked()"> {{ button.name }} </a>
+                <a class = "navbar-brand fa {{ backButton.icon }}" (click) = "backButtonClicked()"> {{ backButton.name }} </a>
                 <a class = "navbar-brand text-center" id = "displayName"> {{ displayName }} </a>
                 <a class = "navbar-brand align-right fa fa-sign-out" (click) = "logout()"> התנתק </a>
             </div>
