--- a/Mifalot-app/src/app/pages/messages/messages.component.html
+++ b/Mifalot-app/src/app/pages/messages/messages.component.html
@@ -1,7 +1,7 @@
 <!-- ================================================================================================================================================ -->
 <!-- Navbar -->
 
-<app-nav-header [button] = "button" (onUserClicked) = "navigate()"></app-nav-header>
+<app-nav-header [backButton] = "backButton" (onUserClicked) = "navigate()"></app-nav-header>
 
 <!-- ================================================================================================================================================ -->
 <!-- User wait for admin to confirm him OR user was blocked by admin -->
@@ -24,15 +24,12 @@
     <div *ngIf = "noChatRoomSelected && !createNewChatRoom && !editChatRoom" >
       <div class = "row" >
 
-      <div class = "container">
-            <button (click) = "newChatRoom()" type = "button" class = "btn btn-success btn-block" > <i class = "fa fa-plus" > </i> יצירת חדר צ׳אט חדש </button>
-             <!-- Search team -->
-
-            <input type = "text" class = "search text-right col-xs-8 col-xs-offset-2" placeholder = "חיפוש צ'אט" [(ngModel)] = "chatName" />
-
- 
-     
-      </div>
+        <div class = "container">
+          <button (click) = "newChatRoom()" type = "button" class = "btn btn-success btn-block" > <i class = "fa fa-plus" > </i> יצירת חדר צ׳אט חדש </button>
+            
+            <!-- Search team -->
+          <input type = "text" class = "search text-right col-xs-8 col-xs-offset-2" placeholder = "חיפוש צ'אט" [(ngModel)] = "chatName" />
+        </div>
 
       <div class = "vertical-menu chat-rooms">
           <div *ngIf = "(chatRooms | async)?.length == 0" class = "alert alert-warning text-center" role = "alert">
