--- a/Mifalot-app/src/app/pages/pupils-management/pupils-management.component.html
+++ b/Mifalot-app/src/app/pages/pupils-management/pupils-management.component.html
@@ -6,11 +6,11 @@
 <!-- ================================================================================================================================================ -->
 <!-- User wait for admin to confirm him OR user was blocked by admin -->
 
-<app-user-status *ngIf = "userObject.permission == 4 || userObject.permission == 5" [permission] = "userObject.permission"></app-user-status>
+<app-user-status *ngIf = "user.permission == 4 || user.permission == 5" [permission] = "user.permission"></app-user-status>
 
 <!-- ================================================================================================================================================ -->
 
-<div *ngIf = "userObject.permission != 4 && userObject.permission != 5">
+<div *ngIf = "user.permission != 4 && user.permission != 5">
 
     <!-- Page header -->
     <app-page-header [item] = "header"> </app-page-header>
@@ -29,7 +29,7 @@
                 </div>
 
                 <div *ngFor = "let team of teams | async" class = "col-lg-12 col-md-12 col-xs-12 thumb">
-                    <span *ngIf = "userObject.permission == 3 && userObject.uid == team.coachID" class = "thumbnail" (click) = "getPupilsByTeam(team)">
+                    <span *ngIf = "user.permission == 3 && user.uid == team.coachID" class = "thumbnail" (click) = "getPupilsByTeam(team)">
                         <button  type = "button" class = "btn btn-default btn-block btn-team" > {{ team.name }} <i class = "fa fa-soccer-ball-o" > </i> </button>
                     </span>
                 </div>
