--- a/Mifalot-app/src/app/pages/attendance/attendance.component.css
+++ b/Mifalot-app/src/app/pages/attendance/attendance.component.css
@@ -1,8 +1,3 @@
-/*footer*/
-footer{
-    margin-bottom: 5%;
-}
-
 .titlePage
 {
   text-align: center;
@@ -112,93 +107,20 @@ footer{
 {
   color: white;
   margin-right: 10%;
-
 }
 
 /******************************/
 /*
-.checkbox label:after, 
-.radio label:after
-{
-    content: '';
-    display: table;
-    clear: both;
-}
-
-.radio .cr {
-    border-radius: 50%;
-}
-
-.checkbox .cr .cr-icon,
-.radio .cr .cr-icon 
-{
-    position: absolute;
-    font-size: .8em;
-    line-height: 0;
-    top: 50%;
-    left: 20%;
-}
-
-.radio .cr .cr-icon 
-{
-    margin-left: 0.04em;
-}
-
-.checkbox label input[type="checkbox"],
-.radio label input[type="radio"] 
-{
-    display: none;   
-}
-
-.checkbox label input[type="checkbox"] + .cr > .cr-icon,
-.radio label input[type="radio"] + .cr > .cr-icon 
-{
-    transform: scale(3) rotateZ(-20deg);
-    opacity: 0;
-    transition: all .3s ease-in; 
-}
-
-.checkbox label input[type="checkbox"]:checked + .cr > .cr-icon,
-.radio label input[type="radio"]:checked + .cr > .cr-icon 
-{
-    transform: scale(1) rotateZ(0deg);
-    opacity: 1;
-}
-
-.checkbox label input[type="checkbox"]:disabled + .cr,
-.radio label input[type="radio"]:disabled + .cr 
-{
-    opacity: .5; 
-}
-
-label
-{
-    font-size: 1em;
-    padding: 1%;
-}*/
-
-hr
-{
-    width: 80%;
-}
-
-
-
-
-
-
-
-
-/*
  * Toggle button styles
  */
+
 .toggle-button 
 {
   position: relative;
   display: inline-block;
   color: #fff; 
   width: 100%;
-  margin-bottom: 2%;
+  margin-bottom: 8px;
 }
 
 .toggle-button label 
