--- a/Mifalot-app/src/app/pages/login/login.component.html
+++ b/Mifalot-app/src/app/pages/login/login.component.html
@@ -13,8 +13,9 @@
 <!-- /Error Message -->
 <!-- ====================================================================================================================================== -->
 <!-- Login Form -->
+<app-loading *ngIf = "showSpinner"> </app-loading>
 
-<div class = "modal-dialog">
+<div *ngIf = "!showSpinner" class = "modal-dialog">
   <div class = "loginmodal-container">
      <div class = "logo">
 			<img src = " https://firebasestorage.googleapis.com/v0/b/application-d2061.appspot.com/o/logo.jpg?alt=media&token=a0294e5b-4622-4971-8065-38330bc8b12b " />
