--- a/Mifalot-app/src/app/pages/messages/messages.component.css
+++ b/Mifalot-app/src/app/pages/messages/messages.component.css
@@ -321,7 +321,7 @@ input::placeholder
   background-image: -ms-linear-gradient(bottom, #ea8378 15%, #e2675a 100%);
   background-image: -o-linear-gradient(bottom, #ea8378 15%, #e2675a 100%);
   background-image: linear-gradient(to bottom, #ea8378 15%, #e2675a 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#e2675a', endColorstr='#ea8378');
+  /*filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#e2675a', endColorstr='#ea8378');*/
 }
 
 .red:after 
@@ -339,7 +339,7 @@ input::placeholder
   background-image: -ms-linear-gradient(bottom, #ffbee3 15%, #f8a5ce 100%);
   background-image: -o-linear-gradient(bottom, #ffbee3 15%, #f8a5ce 100%);
   background-image: linear-gradient(to bottom, #ffbee3 15%, #f8a5ce 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#f8a5ce', endColorstr='#ffbee3');
+  /*filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#f8a5ce', endColorstr='#ffbee3');*/
 }
 
 .pink:after 
