--- a/Mifalot-app/src/app/pages/registration/registration.component.css
+++ b/Mifalot-app/src/app/pages/registration/registration.component.css
@@ -2,7 +2,7 @@
 {
     padding: 30px;
     max-width: 350px;
-    width: 100% !important;
+    width: 100%;
     background-color: transparent;
     margin: 0 auto;
     border-radius: 2px;
