Fixing css issues

--- a/Mifalot-app/src/app/pages/registration/registration.component.css
+++ b/Mifalot-app/src/app/pages/registration/registration.component.css
@@ -15,7 +15,7 @@
     transform: translate(-50%, -50%);
 }
 
-.registermodal-container h1 
+.registermodal-container > h1 
 {
     text-align: center;
     font-size: 1.8em;
