--- a/Mifalot-app/src/app/pages/registration/registration.component.css
+++ b/Mifalot-app/src/app/pages/registration/registration.component.css
@@ -6,7 +6,7 @@
     background-color: transparent;
     margin: 0 auto;
     border-radius: 2px;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
     overflow: hidden;
     font-family: roboto;
     left: 50%;
@@ -15,7 +15,7 @@
     transform: translate(-50%, -50%);
 }
 
-.registermodal-container > h1 
+h1 
 {
     text-align: center;
     font-size: 1.8em;
@@ -27,4 +27,9 @@ input
 {
 	text-align: right;
     direction: rtl;
+}
+
+.modal-dialog
+{
+    margin: 0;
 }
