--- a/Mifalot-app/src/app/_animations/spinner/spinner.component.css
+++ b/Mifalot-app/src/app/_animations/spinner/spinner.component.css
@@ -24,9 +24,12 @@
     border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
     border-left: 1.1em solid #ffffff;
     -webkit-transform: translateZ(0);
+    -moz-transform: translateZ(0);
+    -o-transform: translateZ(0);
     -ms-transform: translateZ(0);
     transform: translateZ(0);
     -webkit-animation: load8 1.1s infinite linear;
+    -moz-animation: load8 1.1s infinite linear;
     animation: load8 1.1s infinite linear;
 }
 @-webkit-keyframes load8 
