--- a/Mifalot-app/src/app/pages/reports/reports.component.css
+++ b/Mifalot-app/src/app/pages/reports/reports.component.css
@@ -3,7 +3,8 @@
     float: left;
     margin-top: 8px;
 }
-.clickable{
+.clickable
+{
 	cursor: pointer;   
 }
 
@@ -52,12 +53,13 @@ th
     text-align: center;
 }
 
+
 .dropdown-menu
 {
     text-align: right;
     min-height: 60px;
-    max-height: 100px;
-    width: 100%;
+    max-height: 190px;
+    min-width: 100%;
     max-width: 100%;
     overflow-y: scroll;
 }
