--- a/Mifalot-app/src/app/pages/reports/reports.component.html
+++ b/Mifalot-app/src/app/pages/reports/reports.component.html
@@ -24,7 +24,7 @@
 	<!-- Choose Team & Date buttons -->
 
 	<div class = "row"> 
-		<div class = "col-xs-4 col-sm-4 col-md-4 col-lg-4">
+		<div class = "col-xs-4">
 			<div class = "dropdown">
 				<button (click) = "pressedOnChooseDate()" class = "btn btn-primary btn-block dropdown-toggle" type = "button" data-toggle = "dropdown">
 					<span class = "caret"></span>
@@ -37,10 +37,10 @@
 				</ul>
 			</div>
 		</div>
-		<div class = "col-xs-8 col-sm-8 col-md-8 col-lg-8">
+		<div class = "col-xs-8">
 			<div class = "dropdown">
 				<button class = "btn btn-primary btn-block dropdown-toggle" type = "button" data-toggle = "dropdown">
-					<span>	{{ chosenTeam }} </span>
+					<span> {{ chosenTeam }} </span>
 					<span class = "caret"></span>
 				</button>
 				<ul class = "dropdown-menu">
@@ -59,7 +59,7 @@
 <!-- Presence Table -->
 
 	<div class = "row">
-		<div class = "col-xs-12 col-sm-12 col-md-12 col-lg-12">
+		<div class = "col-xs-12">
 			<div *ngIf = "dateSelected" class = "panel panel-primary">
 				<div class = "panel-heading">
 					<h3 class = "panel-title"> רשימת נוכחות </h3>
