--- a/Mifalot-app/src/app/pages/messages/messages.component.css
+++ b/Mifalot-app/src/app/pages/messages/messages.component.css
@@ -18,26 +18,19 @@ input
 .search
 {
     direction: rtl;
-    border-radius: 10px;
+    border-radius: 7.5px;
     border: 2px solid white;
     background: #faebd7;
     color: black;
     margin-bottom: 8px;
     padding-right: 10px;
-    height: 33.5px;
+    width: 100%;
 }
 
 .search::placeholder
 {
     text-align: center;
     padding-left: 10px;
-}
-
-.fa-search
-{
-  color: white;
-  margin-top: 7px;
-  font-size: 130%;
 }
 
 .margin-bottom
@@ -95,6 +88,7 @@ p
   width: 100%;
   height: 100%;
   overflow-y: scroll;
+  margin-bottom: 12px;
 }
 
 .chat-rooms
@@ -259,7 +253,7 @@ input::placeholder
 
 .bubble p 
 {
-  font-size: 1.3em;
+  font-size: 1.6em;
 }
 
 /* green bubble */
@@ -445,7 +439,7 @@ input::placeholder
 {
     .vertical-menu 
     {
-      height: 495px;
+      height: 475px;
     }
 
     .messages
