Create 'forgot password'

--- a/Mifalot-app/src/app/pages/login/login.component.css
+++ b/Mifalot-app/src/app/pages/login/login.component.css
@@ -47,7 +47,7 @@ input[type = "email"], input[type = "password"]
 	width: 100%;
 }
 
-.btn-register
+.btn-register, .btn-password
 {
   cursor: pointer;
 }
