--- a/Mifalot-app/src/app/pages/login/login.component.html
+++ b/Mifalot-app/src/app/pages/login/login.component.html
@@ -44,6 +44,8 @@
 
     <hr>
     <a class = "btn-register" [routerLink] = "['/register']"> הירשם כעת </a>
+    <a class = "btn-password pull-right" [routerLink] = "['/forgot-password']"> ?שכחת סיסמה </a>
+
   </div>
 </div>
 
